--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
 
  .header-container {
      background-color: rgba(255, 144, 14, 0.1);
+    
  }
 
  .header-tittle {
@@ -11,33 +12,33 @@
      color: #131313;
  }
 
- .header-section img{
-   width: 75%;
-   margin-top: 50px;
-   margin-left: 150px;
-border-radius: 8px;
+ .header-section img {
+     width: 75%;
+     margin-top: 50px;
+     margin-left: 150px;
+     border-radius: 8px;
 
  }
 
 
-nav{
-    display: flex;
-    justify-content: space-between;
-    padding: 25px 100px;
-}
+ nav {
+     display: flex;
+     justify-content: space-between;
+     padding: 25px 100px;
+ }
 
-nav li{
-    list-style: none;
-    margin-left: 25px
-}
+ nav li {
+     list-style: none;
+     margin-left: 25px
+ }
 
 
 
  nav ul {
      display: flex;
-     
 
-    align-items: center;
+
+     align-items: center;
 
 
  }
@@ -50,6 +51,7 @@ nav li{
      font-size: 64px;
      text-align: center;
      color: #131313;
+   
  }
 
  .header-description {
@@ -81,4 +83,46 @@ nav li{
      color: azure;
  }
 
- 
+
+ /* quick-list-container  */
+
+.quick-list-container{
+
+    display: flex;
+    margin-top: 100px;
+
+}
+
+
+ .quick-photo {
+     display: grid;
+     grid-template-columns: repeat(2, 1fr);
+     gap: 24px;
+ }
+
+ .quick-list-container,
+ img {
+
+     width: 342px;
+     height: 342px;
+     margin-left: 50px;
+    
+
+
+ }
+
+ .quick-list-text{
+    margin-left: 240px;
+    margin-top: 150px;
+ }
+
+ .quick-list-header {
+     font-weight: 500;
+     font-size: 45px;
+ }
+
+ .quick-list-paragraph {
+     font-weight: 400;
+     font-size: 16px;
+     color: #727272;
+ }
