--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,12 @@
 
  .header-container {
      background-color: rgba(255, 144, 14, 0.1);
-    
+
+
+ }
+
+ .header-section {
+     height: 970px;
  }
 
  .header-tittle {
@@ -51,7 +56,7 @@
      font-size: 64px;
      text-align: center;
      color: #131313;
-   
+
  }
 
  .header-description {
@@ -86,12 +91,12 @@
 
  /* quick-list-container  */
 
-.quick-list-container{
+ .quick-list-container {
 
-    display: flex;
-    margin-top: 100px;
+     display: flex;
+     margin-top: 100px;
 
-}
+ }
 
 
  .quick-photo {
@@ -106,14 +111,14 @@
      width: 342px;
      height: 342px;
      margin-left: 50px;
-    
+
 
 
  }
 
- .quick-list-text{
-    margin-left: 240px;
-    margin-top: 150px;
+ .quick-list-text {
+     margin-left: 240px;
+     margin-top: 150px;
  }
 
  .quick-list-header {
@@ -125,4 +130,187 @@
      font-weight: 400;
      font-size: 16px;
      color: #727272;
+ }
+
+
+ /* feature-section */
+
+ .feature-section {
+     margin-top: 550px;
+     margin-left: 100px;
+
+
+ }
+
+
+ .feature-text {
+     padding: 30px;
+ }
+
+ .feature-tittle-section {
+     background: #FFFFFF;
+     box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+     border-radius: 8px;
+     margin-right: 700px;
+     margin-top: 30px;
+
+ }
+
+
+
+ .feature-header {
+     font-weight: 700;
+     font-size: 45px;
+     color: #131313;
+ }
+
+ .feature-paragraph {
+     font-weight: 400;
+     font-size: 16px;
+     color: #727272;
+     margin-right: 450px;
+     padding: 250;
+ }
+
+ .feature-tittle {
+     font-weight: 600;
+     font-size: 20px;
+     color: #131313;
+     margin-left: 20px;
+
+
+ }
+
+ .feature-sub-titlle {
+     font-weight: 400;
+     font-size: 16px;
+     color: #727272;
+ }
+
+ /* some-facts styles */
+
+ .facts {
+     margin-left: 200px;
+ }
+
+ .facts-header {
+     font-weight: 700;
+     font-size: 45px;
+     color: #131313;
+ }
+
+ .facts-paragraph {
+     font-weight: 400;
+     font-size: 16px;
+     color: #727272;
+     line-height: 26px;
+ }
+
+ /* icon styles */
+
+
+
+
+ .facts-container {
+     margin-top: 50px;
+
+
+     margin-left: 200px;
+     display: flex;
+     justify-content: space-between;
+
+
+
+
+
+
+ }
+
+ .facts-icon {
+     border: 1px solid red;
+ }
+
+
+
+
+ .facts-container img {
+     width: 45.22px;
+     height: 45.22px;
+     margin-top: 20px;
+
+
+ }
+
+ .icon-header {
+     font-weight: 600;
+     font-size: 45px;
+     color: #424242;
+     margin-left: 50px;
+     margin-top: 10px;
+ }
+
+ .icon-paragraph {
+     font-weight: 600;
+     font-size: 20px;
+     color: #727272;
+     margin-left: 10px;
+
+
+ }
+
+
+ /* sponser styles */
+
+ .sponser-header {
+     font-weight: 700;
+     font-size: 45px;
+     color: #131313;
+     text-align: center;
+ }
+
+ .sponser-paragraph {
+     font-weight: 400;
+     font-size: 16px;
+     color: #727272;
+     text-align: center;
+ }
+
+ .sponser-picure {
+     justify-content: space-between;
+     margin-left: 250px;
+
+     margin-top: 50px;
+
+
+ }
+
+
+ .sponser-picure img {
+     width: 166.76px;
+     height: 50px;
+
+ }
+
+ /* fotter  */
+
+ .fotter-tittle {
+     margin-top: 150px;
+     background-color: bisque;
+     width: 1440px;
+     height: 100px;
+     margin-left: 100px;
+ }
+
+ .fotter-sub-tittle {
+     font-weight: 400;
+     font-size: 20px;
+     text-align: center;
+     color: #424242;
+
+ }
+
+ /* media query styles */
+
+ @media only screen  {
+    
  }
